@@ -1,5 +1,6 @@
 # RCSB_UTILS_MULTIPROC HISTORY
 
-25-Aug-2018  - Split off from py-rcsb_db
-26-Aug-2018. - Tweak testing configuration
+25-Aug-2018  - V0.10 Split off from py-rcsb_db
+26-Aug-2018  - V0.11 Tweak testing configuration
+23-Mar-2019  - V0.12 Handle nonhashable data lists and add pool mode
 
